[gd_scene load_steps=85 format=3 uid="uid://nyoassqddeo1"]

[ext_resource type="Script" path="res://Characters/rogue_goblin/rogue_goblin_character_body.gd" id="1_fqv6n"]
[ext_resource type="Texture2D" uid="uid://dysgk2xodvr0m" path="res://Characters/rogue_goblin/RogueGoblin-Sheet#1.png" id="2_n5hok"]
[ext_resource type="Script" path="res://utility/state_machine.gd" id="2_ss2gg"]
[ext_resource type="Texture2D" uid="uid://cdiiwoyrldl2n" path="res://Characters/rogue_goblin/run_loop/RunLoop1.png" id="3_3mty0"]
[ext_resource type="Script" path="res://Characters/rogue_goblin/idle.gd" id="3_pbk5n"]
[ext_resource type="Texture2D" uid="uid://cqenf4hxjuchx" path="res://Characters/rogue_goblin/run_loop/RunLoop2.png" id="4_dkfdc"]
[ext_resource type="Texture2D" uid="uid://b11iomkoxp3vg" path="res://Characters/rogue_goblin/run_loop/RunLoop3.png" id="5_k2exy"]
[ext_resource type="Script" path="res://Characters/rogue_goblin/run.gd" id="5_q251a"]
[ext_resource type="Texture2D" uid="uid://leh86vcnktxg" path="res://Characters/rogue_goblin/run_loop/RunLoop4.png" id="6_wyfpi"]
[ext_resource type="Texture2D" uid="uid://bs0gibw37cr5l" path="res://Characters/rogue_goblin/run_loop/RunLoop5.png" id="7_sg0bk"]
[ext_resource type="Texture2D" uid="uid://dmqut40harjjj" path="res://Characters/rogue_goblin/run_loop/RunLoop6.png" id="8_ia748"]
[ext_resource type="Texture2D" uid="uid://dwvyvokivk66s" path="res://Characters/rogue_goblin/run_loop/RunLoop7.png" id="9_ueciv"]
[ext_resource type="Texture2D" uid="uid://dmafc7fhl2536" path="res://Characters/rogue_goblin/run_loop/RunLoop8.png" id="10_q50as"]
[ext_resource type="Texture2D" uid="uid://6ac6byaftrpg" path="res://Characters/rogue_goblin/run_loop/RunLoop9.png" id="11_fql6x"]
[ext_resource type="Texture2D" uid="uid://bv3c2fk8qovel" path="res://Characters/rogue_goblin/run_loop/RunLoop10.png" id="12_1nsxl"]
[ext_resource type="Script" path="res://Characters/rogue_goblin/light_attack_1.gd" id="16_l42jq"]
[ext_resource type="PackedScene" uid="uid://dpkefryb25jky" path="res://hit_box.tscn" id="17_vadwp"]
[ext_resource type="Script" path="res://Characters/rogue_goblin/hurt.gd" id="18_pgu14"]
[ext_resource type="Script" path="res://Characters/rogue_goblin/freeze.gd" id="19_1id8c"]
[ext_resource type="Script" path="res://utility/hurt_box.gd" id="19_5dd0n"]
[ext_resource type="Script" path="res://Characters/rogue_goblin/death.gd" id="20_gsh4w"]
[ext_resource type="AudioStream" uid="uid://c47jo678pa05g" path="res://Characters/rogue_goblin/sounds/sfx_enemy_roguegoblin_hurt/sfx_enemy_roguegoblin_hurt_01 [Draft 2].wav" id="21_bp6b2"]
[ext_resource type="Texture2D" uid="uid://b6x2sa0qrnulc" path="res://utility/NoteSlotsControl/Noteslot.png" id="22_ht5qc"]
[ext_resource type="AudioStream" uid="uid://d36k1qybsdt77" path="res://Characters/sfx/sfx_enemy_impact_03 [Draft 2].wav" id="22_sbvn5"]
[ext_resource type="AudioStream" uid="uid://rnnkh5bkitj0" path="res://assets/sfx/char_al_jest_sliceoff {2d997ada-ed9c-4668-8a24-0dbe277d9555}.wav" id="23_5pkc1"]
[ext_resource type="Texture2D" uid="uid://chs8ibt06rinv" path="res://assets/characters/do.png" id="23_fjkqp"]
[ext_resource type="Script" path="res://utility/solfege_ball.gd" id="24_m2k14"]
[ext_resource type="Texture2D" uid="uid://cm208n8affa81" path="res://assets/characters/re.png" id="25_2ugom"]
[ext_resource type="Texture2D" uid="uid://0t1ixaxovtnc" path="res://assets/characters/mi.png" id="26_hl8u7"]
[ext_resource type="Texture2D" uid="uid://cuhu63pmhxyr4" path="res://assets/characters/fa.png" id="27_wyui5"]
[ext_resource type="Texture2D" uid="uid://dmfoupxsxgjfn" path="res://assets/characters/so.png" id="28_oqbnx"]
[ext_resource type="Texture2D" uid="uid://bjvfxwyag5jg7" path="res://assets/characters/la.png" id="29_g2brf"]
[ext_resource type="Texture2D" uid="uid://cymlinrljycyu" path="res://assets/characters/ti.png" id="30_kda57"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eaoju"]
atlas = ExtResource("2_n5hok")
region = Rect2(1218, 360, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_ht8qa"]
atlas = ExtResource("2_n5hok")
region = Rect2(1392, 360, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_f86op"]
atlas = ExtResource("2_n5hok")
region = Rect2(1566, 360, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_qglbv"]
atlas = ExtResource("2_n5hok")
region = Rect2(1740, 360, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_ara3l"]
atlas = ExtResource("2_n5hok")
region = Rect2(1914, 360, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_22uw6"]
atlas = ExtResource("2_n5hok")
region = Rect2(2088, 360, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_846nd"]
atlas = ExtResource("2_n5hok")
region = Rect2(2262, 360, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ro5i"]
atlas = ExtResource("2_n5hok")
region = Rect2(2436, 360, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_2871s"]
atlas = ExtResource("2_n5hok")
region = Rect2(2610, 360, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_ov3id"]
atlas = ExtResource("2_n5hok")
region = Rect2(2784, 360, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_054u7"]
atlas = ExtResource("2_n5hok")
region = Rect2(2958, 360, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_35edm"]
atlas = ExtResource("2_n5hok")
region = Rect2(3132, 360, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fvcg"]
atlas = ExtResource("2_n5hok")
region = Rect2(1740, 0, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_vddeo"]
atlas = ExtResource("2_n5hok")
region = Rect2(0, 360, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_ae17w"]
atlas = ExtResource("2_n5hok")
region = Rect2(174, 360, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdvk2"]
atlas = ExtResource("2_n5hok")
region = Rect2(348, 360, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_332tl"]
atlas = ExtResource("2_n5hok")
region = Rect2(522, 360, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_wia7m"]
atlas = ExtResource("2_n5hok")
region = Rect2(696, 360, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ic1l"]
atlas = ExtResource("2_n5hok")
region = Rect2(870, 360, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_mt050"]
atlas = ExtResource("2_n5hok")
region = Rect2(1044, 360, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_uy8kj"]
atlas = ExtResource("2_n5hok")
region = Rect2(0, 0, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_sh6t7"]
atlas = ExtResource("2_n5hok")
region = Rect2(174, 0, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_ty413"]
atlas = ExtResource("2_n5hok")
region = Rect2(348, 0, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqb07"]
atlas = ExtResource("2_n5hok")
region = Rect2(522, 0, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjy3p"]
atlas = ExtResource("2_n5hok")
region = Rect2(696, 0, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pcue"]
atlas = ExtResource("2_n5hok")
region = Rect2(870, 0, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_xa8p1"]
atlas = ExtResource("2_n5hok")
region = Rect2(1044, 0, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhktp"]
atlas = ExtResource("2_n5hok")
region = Rect2(1218, 0, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_6er4m"]
atlas = ExtResource("2_n5hok")
region = Rect2(1392, 0, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctnrc"]
atlas = ExtResource("2_n5hok")
region = Rect2(1566, 0, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_iynwq"]
atlas = ExtResource("2_n5hok")
region = Rect2(1740, 0, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hlhg"]
atlas = ExtResource("2_n5hok")
region = Rect2(0, 180, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufei6"]
atlas = ExtResource("2_n5hok")
region = Rect2(174, 180, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lojv"]
atlas = ExtResource("2_n5hok")
region = Rect2(348, 180, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkyi8"]
atlas = ExtResource("2_n5hok")
region = Rect2(522, 180, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg1yw"]
atlas = ExtResource("2_n5hok")
region = Rect2(696, 180, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk3gp"]
atlas = ExtResource("2_n5hok")
region = Rect2(870, 180, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7jht"]
atlas = ExtResource("2_n5hok")
region = Rect2(1044, 180, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmfew"]
atlas = ExtResource("2_n5hok")
region = Rect2(1218, 180, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifr7o"]
atlas = ExtResource("2_n5hok")
region = Rect2(1392, 180, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_v32cy"]
atlas = ExtResource("2_n5hok")
region = Rect2(1566, 180, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_vftsm"]
atlas = ExtResource("2_n5hok")
region = Rect2(1740, 180, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7hkq"]
atlas = ExtResource("2_n5hok")
region = Rect2(1914, 180, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0bac"]
atlas = ExtResource("2_n5hok")
region = Rect2(2088, 180, 174, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_5g5l6"]
atlas = ExtResource("2_n5hok")
region = Rect2(2262, 180, 174, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_k74mf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eaoju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ht8qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f86op")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qglbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ara3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22uw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_846nd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ro5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2871s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ov3id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_054u7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35edm")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fvcg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vddeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ae17w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdvk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_332tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wia7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ic1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mt050")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uy8kj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sh6t7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ty413")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqb07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjy3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pcue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xa8p1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhktp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6er4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctnrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iynwq")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hlhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufei6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lojv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkyi8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg1yw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk3gp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7jht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmfew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifr7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v32cy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vftsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7hkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0bac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5g5l6")
}],
"loop": false,
"name": &"light_attack_1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_3mty0")
}, {
"duration": 1.0,
"texture": ExtResource("4_dkfdc")
}, {
"duration": 1.0,
"texture": ExtResource("5_k2exy")
}, {
"duration": 1.0,
"texture": ExtResource("6_wyfpi")
}, {
"duration": 1.0,
"texture": ExtResource("7_sg0bk")
}, {
"duration": 1.0,
"texture": ExtResource("8_ia748")
}, {
"duration": 1.0,
"texture": ExtResource("9_ueciv")
}, {
"duration": 1.0,
"texture": ExtResource("10_q50as")
}, {
"duration": 1.0,
"texture": ExtResource("11_fql6x")
}, {
"duration": 1.0,
"texture": ExtResource("12_1nsxl")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2eafg"]
size = Vector2(34, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nbw8k"]
size = Vector2(379.5, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1v0j1"]
size = Vector2(78.5, 47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ty7w"]
size = Vector2(27, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5yl4c"]
size = Vector2(11, 28)

[node name="RogueGoblinCharacterBody" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_fqv6n")
damage = 3

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_k74mf")
animation = &"idle"
offset = Vector2(30, 0)

[node name="HitBox" parent="AnimatedSprite2D" groups=["enemy"] instance=ExtResource("17_vadwp")]
visible = false

[node name="HitCollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/HitBox"]
position = Vector2(13.6667, 7.33333)
shape = SubResource("RectangleShape2D_2eafg")
debug_color = Color(0.856711, 0.298909, 0.546538, 0.42)

[node name="MoveRange" type="Area2D" parent="AnimatedSprite2D"]
visible = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/MoveRange"]
visible = false
position = Vector2(-1, -33)
shape = SubResource("RectangleShape2D_nbw8k")

[node name="AttackRange" type="Area2D" parent="AnimatedSprite2D"]
visible = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/AttackRange"]
position = Vector2(33.75, -0.5)
shape = SubResource("RectangleShape2D_1v0j1")
debug_color = Color(0.691044, 0.497214, 0.0236368, 0.42)

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource("2_ss2gg")
initial_state = NodePath("Idle")

[node name="Idle" type="Node2D" parent="StateMachine"]
script = ExtResource("3_pbk5n")

[node name="Run" type="Node2D" parent="StateMachine"]
script = ExtResource("5_q251a")

[node name="LightAttack1" type="Node2D" parent="StateMachine"]
script = ExtResource("16_l42jq")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="StateMachine/LightAttack1"]
volume_db = 10.0

[node name="Hurt" type="Node2D" parent="StateMachine"]
script = ExtResource("18_pgu14")

[node name="AudioStreamPlayer2D_Hurt" type="AudioStreamPlayer2D" parent="StateMachine/Hurt"]

[node name="AudioStreamPlayer2D_Impact" type="AudioStreamPlayer2D" parent="StateMachine/Hurt"]
volume_db = 18.0

[node name="Freeze" type="Node2D" parent="StateMachine" groups=["enemy"]]
script = ExtResource("19_1id8c")

[node name="AudioStreamPlayer2D_Hurt" type="AudioStreamPlayer2D" parent="StateMachine/Freeze"]

[node name="AudioStreamPlayer2D_Impact" type="AudioStreamPlayer2D" parent="StateMachine/Freeze"]
volume_db = 9.0

[node name="Death" type="Node2D" parent="StateMachine"]
script = ExtResource("20_gsh4w")

[node name="AudioStreamPlayer2D_Death" type="AudioStreamPlayer2D" parent="StateMachine/Death"]
stream = ExtResource("21_bp6b2")
volume_db = 5.0

[node name="AudioStreamPlayer2D_Impact" type="AudioStreamPlayer2D" parent="StateMachine/Death"]
stream = ExtResource("22_sbvn5")
volume_db = 18.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="StateMachine/Death"]
stream = ExtResource("23_5pkc1")

[node name="HurtBox" type="Area2D" parent="."]
visible = false
script = ExtResource("19_5dd0n")

[node name="HurtCollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_7ty7w")
debug_color = Color(0.117921, 0.647349, 0, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, 8)
shape = SubResource("RectangleShape2D_5yl4c")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
offset_left = -9.0
offset_top = -48.0
offset_right = 86.0
offset_bottom = -31.0
theme_override_constants/separation = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AspectRatioContainer3" type="AspectRatioContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AspectRatioContainer4" type="AspectRatioContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AspectRatioContainer5" type="AspectRatioContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SolfegeWheel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -3.33333
offset_right = 40.0
offset_bottom = 36.6667

[node name="Outline" type="TextureRect" parent="SolfegeWheel"]
layout_mode = 0
offset_left = -14.0
offset_top = -48.0
offset_right = 15.0
offset_bottom = -19.0
texture = ExtResource("22_ht5qc")
expand_mode = 1

[node name="SolfegeContainer" type="Control" parent="SolfegeWheel" groups=["player"]]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Do" type="TextureRect" parent="SolfegeWheel/SolfegeContainer"]
self_modulate = Color(4, 0.15, 0.27, 1)
layout_mode = 0
offset_left = -11.0
offset_top = -45.0
offset_right = 12.0
offset_bottom = -22.0
texture = ExtResource("23_fjkqp")
expand_mode = 1
script = ExtResource("24_m2k14")

[node name="Label" type="Label" parent="SolfegeWheel/SolfegeContainer/Do"]
visible = false
layout_mode = 0
offset_left = 1.66667
offset_right = 41.6667
offset_bottom = 23.0
theme_override_font_sizes/font_size = 15
text = "Do"

[node name="Re" type="TextureRect" parent="SolfegeWheel/SolfegeContainer"]
self_modulate = Color(4, 0.448, 0.07, 1)
layout_mode = 0
offset_left = 22.0
offset_top = -28.0
offset_right = 45.0
offset_bottom = -5.0
texture = ExtResource("25_2ugom")
expand_mode = 1
script = ExtResource("24_m2k14")
solfege_ball_positions_index = 1

[node name="Label" type="Label" parent="SolfegeWheel/SolfegeContainer/Re"]
visible = false
layout_mode = 0
offset_left = 1.66667
offset_right = 41.6667
offset_bottom = 23.0
theme_override_font_sizes/font_size = 15
text = "Re"

[node name="Mi" type="TextureRect" parent="SolfegeWheel/SolfegeContainer"]
self_modulate = Color(4, 0.8, 0, 1)
layout_mode = 0
offset_left = 27.0
offset_right = 50.0
offset_bottom = 23.0
texture = ExtResource("26_hl8u7")
expand_mode = 1
script = ExtResource("24_m2k14")
solfege_ball_positions_index = 2

[node name="Label" type="Label" parent="SolfegeWheel/SolfegeContainer/Mi"]
visible = false
layout_mode = 0
offset_left = 1.66667
offset_right = 41.6667
offset_bottom = 23.0
theme_override_font_sizes/font_size = 15
text = "Mi"

[node name="Fa" type="TextureRect" parent="SolfegeWheel/SolfegeContainer"]
self_modulate = Color(0.2, 3, 0.25, 1)
layout_mode = 0
offset_left = 7.0
offset_top = 24.0
offset_right = 30.0
offset_bottom = 47.0
texture = ExtResource("27_wyui5")
expand_mode = 1
script = ExtResource("24_m2k14")
solfege_ball_positions_index = 3

[node name="Label" type="Label" parent="SolfegeWheel/SolfegeContainer/Fa"]
visible = false
layout_mode = 0
offset_left = 3.33333
offset_right = 43.3333
offset_bottom = 23.0
theme_override_font_sizes/font_size = 15
text = "Fa"

[node name="So" type="TextureRect" parent="SolfegeWheel/SolfegeContainer"]
self_modulate = Color(0.1, 0.9, 4, 1)
layout_mode = 0
offset_left = -30.0
offset_top = 24.0
offset_right = -7.0
offset_bottom = 47.0
texture = ExtResource("28_oqbnx")
expand_mode = 1
script = ExtResource("24_m2k14")
solfege_ball_positions_index = 4

[node name="Label" type="Label" parent="SolfegeWheel/SolfegeContainer/So"]
visible = false
layout_mode = 0
offset_left = 3.33333
offset_right = 43.3333
offset_bottom = 23.0
theme_override_font_sizes/font_size = 15
text = "So"

[node name="La" type="TextureRect" parent="SolfegeWheel/SolfegeContainer"]
self_modulate = Color(0.35, 0.5, 7, 1)
layout_mode = 0
offset_left = -47.0
offset_right = -24.0
offset_bottom = 23.0
texture = ExtResource("29_g2brf")
expand_mode = 1
script = ExtResource("24_m2k14")
solfege_ball_positions_index = 5

[node name="Label" type="Label" parent="SolfegeWheel/SolfegeContainer/La"]
visible = false
layout_mode = 0
offset_left = 3.33333
offset_right = 43.3333
offset_bottom = 23.0
theme_override_font_sizes/font_size = 15
text = "La"

[node name="Ti" type="TextureRect" parent="SolfegeWheel/SolfegeContainer"]
self_modulate = Color(0.7, 0.3, 4, 1)
layout_mode = 0
offset_left = -42.0
offset_top = -28.0
offset_right = -19.0
offset_bottom = -5.0
texture = ExtResource("30_kda57")
expand_mode = 1
script = ExtResource("24_m2k14")
solfege_ball_positions_index = 6

[node name="Label" type="Label" parent="SolfegeWheel/SolfegeContainer/Ti"]
visible = false
layout_mode = 0
offset_left = 4.66666
offset_right = 44.6667
offset_bottom = 23.0
theme_override_font_sizes/font_size = 15
text = "Ti"
